tech: Run all scenario format using a dataset (#1065)
---------

Co-authored-by: nbrouand <7816908+nbrouand@users.noreply.github.com>